Fix bug with missing color for required abbr when language other than english

--- a/app/assets/stylesheets/global/_global.scss
+++ b/app/assets/stylesheets/global/_global.scss
@@ -4,7 +4,7 @@
   color: $red;
 }
 
-abbr[title='required'] {
+abbr[class='required'] {
   color: $red;
   font-size: 120%;
 }
